# CS120_Labs

./: CMakeLists.txt  CMakePresets.json
lab1/: foo.cpp  foo.h  main.cpp
lab2/: grade_calculator.cpp
lab3/: boolean.cpp  boolean_functions.cpp  boolean_functions.h
lab4/: functions.cpp  plateaus_and_basins.cpp
lab5/: functions.cpp  functions.h  main.cpp
lab6/: functions.cpp  test_functions.cpp
